# resume-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gen_keys.py  pyproject.toml
.github/workflows/: ci.yaml
src/mcp/: __init__.py
src/mcp/overleaf_api/: core.py
src/resume_mcp/: __init__.py
src/resume_mcp/mcp_server/: config.py  prompts.py  server.py  utils.py
src/resume_mcp/overleaf_api/: cli.py  core.py
tests/: test_overleafclient.py
