[project]
name = "resume-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "certifi>=2025.6.15",
    "fastmcp>=2.10.1",
    "pyoverleaf>=0.1.5",
    "typer>=0.16.0",
]

[project.scripts]
mcp = "mcp:main"
overleaf-cli = "resume_mcp.overleaf_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resume_mcp"]
